projet_gl/src/test/deca/syntax/invalid/return/incorrectReturn.deca
// Description:
//    invalid test parser for return.
//
// Resultats:
//    ligne 11 : token recognition error at: '"ok;\n}'.
//
// Historique:
//    cree le 12/01/2024

{
    return "ok;
}